# VL_Predicting-Future-Stock-Price-Trends

./: .gitignore  README.md  USAGE.md  code_status.json  main.py  pyproject.toml
configs/: config.yaml
data/raw/prices/macro/: TAIEX.parquet  USDTWD.parquet  VIX.parquet
data/raw/prices/stocks/: 1216.parquet  1301.parquet  1303.parquet  2002.parquet  2207.parquet  2303.parquet  2308.parquet  2317.parquet  2330.parquet  2382.parquet  2412.parquet  2454.parquet  2881.parquet  2882.parquet  2884.parquet  2886.parquet  2891.parquet  3008.parquet  3711.parquet  4938.parquet
data/raw/twse/: institutional_trading.parquet
data_pipeline/: dataset.py  feature_engineering.py  price_downloader.py  twse_crawler.py
evaluation/: attention_viz.py  metrics.py  shap_analysis.py
models/: gated_transformer.py  gru_model.py  lstm_model.py  markov_regime.py  transformer_baseline.py  transformer_resnet.py  xgboost_model.py
tools/: env_check.py  view_stock.py
training/: train.py  walk_forward_runner.py
