[project]
name = "tw-institutional-stock-prediction"
version = "0.1.0"
description = "Predicting stock price trends using Transformer + institutional investor heterogeneity"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn==1.3.2",
    "xgboost>=2.0",
    "statsmodels>=0.14",
    "shap>=0.44",
    "yfinance>=0.2",
    "arch>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tensorboard>=2.13",
    "requests>=2.31",
    "PyYAML>=6.0",
    "tqdm>=4.65",
    "scipy>=1.11",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
